--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "acfunliveapi"
 version = "0.1.0"
-authors = ["orzogc <orzogc@163.com>"]
+authors = ["orzogc"]
 edition = "2018"
+description = "API for AcFun live's REST interface"
+license = "MIT"
+repository = "https://github.com/orzogc/acfunliveapi"
+readme = "README.md"
+categories = ["api-bindings", "web-programming"]
+keywords = ["acfun", "live"]
 
 [dependencies]
 async-trait = "0.1.50"
