--- a/danmaku/Cargo.toml
+++ b/danmaku/Cargo.toml
@@ -1,8 +1,14 @@
 [package]
 name = "acfunlivedanmaku"
 version = "0.1.0"
-authors = ["orzogc <orzogc@163.com>"]
+authors = ["orzogc"]
 edition = "2018"
+description = "API for AcFun live's danmaku interface"
+license = "MIT"
+repository = "https://github.com/orzogc/acfunliveapi"
+readme = "README.md"
+categories = ["api-bindings", "web-programming"]
+keywords = ["acfun", "live", "danmaku"]
 build = "build.rs"
 
 [dependencies]
@@ -17,7 +23,7 @@ chrono = { version = "0.4.19", default-features = false, features = ["std", "clo
 futures = "0.3.15"
 futures-timer = "3.0.2"
 prost = "0.7.0"
-rand = "0.8.3"
+rand = "0.8.4"
 thiserror = "1.0.25"
 tokio = { version = "1.7.0", features = ["net"] }
 tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"] }
