--- a/danmaku/Cargo.toml
+++ b/danmaku/Cargo.toml
@@ -11,8 +11,13 @@ categories = ["api-bindings", "web-programming"]
 keywords = ["acfun", "live", "danmaku"]
 build = "build.rs"
 
+[features]
+default = ["api", "default_ws_client"]
+api = ["acfunliveapi"]
+default_ws_client = ["tokio", "tokio-tungstenite"]
+
 [dependencies]
-acfunliveapi = { version = "0.1.0", path = "../api" }
+acfunliveapi = { version = "0.1.0", path = "../api", optional = true }
 aes = "0.7.4"
 async-channel = "1.6.1"
 async-compression = { version = "0.3.8", features = ["futures-io", "gzip"] }
@@ -25,8 +30,8 @@ futures-timer = "3.0.2"
 prost = "0.7.0"
 rand = "0.8.4"
 thiserror = "1.0.25"
-tokio = { version = "1.7.0", features = ["net"] }
-tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"] }
+tokio = { version = "1.7.0", features = ["net"], optional = true }
+tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"], optional = true }
 
 [build-dependencies]
 prost-build = "0.7.0"
