--- a/danmaku/Cargo.toml
+++ b/danmaku/Cargo.toml
@@ -12,9 +12,10 @@ keywords = ["acfun", "live", "danmaku"]
 build = "build.rs"
 
 [features]
-default = ["api", "default_ws_client"]
+default = ["api", "default_ws_client", "_serde"]
 api = ["acfunliveapi"]
 default_ws_client = ["tokio", "tokio-tungstenite"]
+_serde = ["serde"]
 
 [dependencies]
 acfunliveapi = { version = "0.1.0", path = "../api", optional = true }
@@ -29,6 +30,7 @@ futures = "0.3.15"
 futures-timer = "3.0.2"
 prost = "0.7.0"
 rand = "0.8.4"
+serde = { version = "1.0.126", features = ["derive"], optional = true }
 thiserror = "1.0.25"
 tokio = { version = "1.7.0", features = ["net"], optional = true }
 tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"], optional = true }
