--- a/danmaku/Cargo.toml
+++ b/danmaku/Cargo.toml
@@ -22,12 +22,12 @@ acfunliveapi = { version = "0.1.0", path = "../api", optional = true }
 aes = "0.7.4"
 async-channel = "1.6.1"
 async-compression = { version = "0.3.8", features = ["futures-io", "gzip"] }
+async-timer = "0.7.4"
 async-trait = "0.1.50"
 base64 = "0.13.0"
 block-modes = "0.8.1"
 chrono = { version = "0.4.19", default-features = false, features = ["std", "clock"] }
 futures = "0.3.15"
-futures-timer = "3.0.2"
 prost = "0.7.0"
 rand = "0.8.4"
 serde = { version = "1.0.126", features = ["derive"], optional = true }
@@ -37,4 +37,4 @@ tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"], optional = 
 
 [build-dependencies]
 prost-build = "0.7.0"
-tokio = { version = "1.7.1", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.7.1", features = ["rt-multi-thread", "macros", "time"] }
