--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -17,8 +17,8 @@ default_http_client = ["pretend-reqwest", "reqwest"]
 [dependencies]
 async-trait = "0.1.50"
 cookie = "0.15.0"
-pretend = { version = "0.2.1", git = "https://github.com/SfietKonstantin/pretend", tag = "v0.2.1" }
-pretend-reqwest = { version = "0.2.1", git = "https://github.com/SfietKonstantin/pretend", tag = "v0.2.1", optional = true }
+pretend = "0.2.1"
+pretend-reqwest = { version = "0.2.1", optional = true }
 reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls", "gzip"], optional = true }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
