add timeout for the default WebSocket client

--- a/danmaku/Cargo.toml
+++ b/danmaku/Cargo.toml
@@ -31,7 +31,7 @@ rand = "0.8.4"
 serde = { version = "1.0.126", features = ["derive"], optional = true }
 serde_bytes = { version = "0.11.5", optional = true }
 thiserror = "1.0.25"
-tokio = { version = "1.7.1", features = ["net"], optional = true }
+tokio = { version = "1.7.1", features = ["macros", "net", "time"], optional = true }
 tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"], optional = true }
 
 [build-dependencies]
