--- a/danmaku/Cargo.toml
+++ b/danmaku/Cargo.toml
@@ -26,15 +26,16 @@ async-trait = "0.1.50"
 base64 = "0.13.0"
 block-modes = "0.8.1"
 futures = "0.3.15"
-prost = "0.7.0"
+log = "0.4.14"
+prost = "0.8.0"
 rand = "0.8.4"
 serde = { version = "1.0.126", features = ["derive"], optional = true }
 serde_bytes = { version = "0.11.5", optional = true }
 serde_json = { version = "1.0.64", optional = true }
 thiserror = "1.0.26"
-tokio = { version = "1.8.0", features = ["macros", "net", "time"], optional = true }
+tokio = { version = "1.8.1", features = ["macros", "net", "time"], optional = true }
 tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"], optional = true }
 
 [build-dependencies]
-prost-build = "0.7.0"
-tokio = { version = "1.8.0", features = ["rt-multi-thread", "macros", "time"] }
+prost-build = "0.8.0"
+tokio = { version = "1.8.1", features = ["rt-multi-thread", "macros", "time"] }
