--- a/danmaku/Cargo.toml
+++ b/danmaku/Cargo.toml
@@ -20,7 +20,7 @@ _serde = ["serde", "serde_bytes", "serde_json"]
 [dependencies]
 acfunliveapi = { version = "0.1.0", path = "../api", optional = true }
 aes = "0.7.4"
-async-trait = "0.1.50"
+async-trait = "0.1.51"
 async-tungstenite = { version = "0.13.1", features = ["tokio-rustls"], optional = true }
 asynchronous-codec = "0.6.0"
 base64 = "0.13.0"
@@ -33,7 +33,7 @@ prost = "0.8.0"
 rand = "0.8.4"
 serde = { version = "1.0.126", features = ["derive"], optional = true }
 serde_bytes = { version = "0.11.5", optional = true }
-serde_json = { version = "1.0.64", optional = true }
+serde_json = { version = "1.0.65", optional = true }
 thiserror = "1.0.26"
 tokio = { version = "1.9.0", features = ["time"], optional = true }
 ws_stream_tungstenite = { version = "0.6.1", optional = true }
@@ -43,4 +43,4 @@ prost-build = "0.8.0"
 
 [dev-dependencies]
 env_logger = "0.9.0"
-tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros", "time"] }
