--- a/danmaku/Cargo.toml
+++ b/danmaku/Cargo.toml
@@ -31,9 +31,9 @@ futures = "0.3.16"
 log = "0.4.14"
 prost = "0.8.0"
 rand = "0.8.4"
-serde = { version = "1.0.126", features = ["derive"], optional = true }
+serde = { version = "1.0.127", features = ["derive"], optional = true }
 serde_bytes = { version = "0.11.5", optional = true }
-serde_json = { version = "1.0.65", optional = true }
+serde_json = { version = "1.0.66", optional = true }
 thiserror = "1.0.26"
 tokio = { version = "1.9.0", features = ["time"], optional = true }
 ws_stream_tungstenite = { version = "0.6.1", optional = true }
@@ -43,4 +43,4 @@ prost-build = "0.8.0"
 
 [dev-dependencies]
 env_logger = "0.9.0"
-tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros", "time"] }
+tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros"] }
