--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -12,12 +12,13 @@ keywords = ["acfun", "live"]
 
 [features]
 default = ["default_http_client"]
-default_http_client = ["reqwest"]
+default_http_client = ["reqwest", "pretend-reqwest"]
 
 [dependencies]
 async-trait = "0.1.51"
 cookie = "0.15.1"
-pretend = "0.2.2"
+pretend = "0.3.0"
+pretend-reqwest = { version = "0.3.0", optional = true, default-features = false }
 reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls", "gzip"], optional = true }
 serde = { version = "1.0.127", features = ["derive"] }
 serde_json = "1.0.66"
